# szox

./: .gitignore  LICENSE  cmake.sh
source/: CMakeLists.txt  szox.cc
source/core/inc/: Chain.h  DirectionVector.h  NDArray.h  NDArray.tt  NDPoint.h
source/core/src/: Chain.cc  NDPoint.cc
source/core/tst/: ChainTest.cc  DirectionVectorTest.cc  NDArray_test.cc  NDPointTest.cc
source/inc/: Chain.h  ExceptionModel.h  NDArray.h  NDPoint.h
source/src/: DirectionVector.cc  NDArray.cc  NDPoint.cc
source/tst/: CMakeLists.txt  ChainTest.cc  ExceptionModel_test.cc  NDArray_test.cc  NDPointTest.cc
source/ut/: CMakeLists.txt  ut.cc
